[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton-node-tools'
version = '0.1.314'

[[bin]]
name = 'adnl_resolve'
path = 'bin/adnl_resolve.rs'


[[bin]]
name = 'adnl_ping'
path = 'bin/adnl_ping.rs'


[[bin]]
name = 'dhtscan'
path = 'bin/dhtscan.rs'


[[bin]]
name = 'gendht'
path = 'bin/gendht.rs'


[[bin]]
name = 'console'
path = 'bin/console.rs'


[[bin]]
name = 'keygen'
path = 'bin/keygen.rs'


[[bin]]
name = 'keyid'
path = 'bin/keyid.rs'


[[bin]]
name = 'print'
path = 'bin/print.rs'


[[bin]]
name = 'zerostate'
path = 'bin/zerostate.rs'

[dependencies]
base64 = '0.13'
clap = '2.33.3'
failure = '0.1.6'
hex = '0.4.2'
log = '0.4.11'
log4rs = '1.2'
serde = '1.0.105'
serde_json = '1.0.56'
shell-words = '1.0.0'
tokio-util = '0.7'
adnl = { features = [ 'client' ], git = 'ssh://git@github.com/tonlabs/ever-adnl.git', tag = 'tag-tmp-rc' }
dht = { git = 'ssh://git@github.com/tonlabs/ever-dht.git', tag = 'tag-tmp-rc' }
overlay = { git = 'ssh://git@github.com/tonlabs/ever-overlay.git', tag = 'tag-tmp-rc' }
tokio = { features = [ 'rt-multi-thread' ], version = '1.5.0' }
ton_api = { git = 'ssh://git@github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = 'tag-tmp-rc' }
ton_block = { git = 'ssh://git@github.com/tonlabs/ever-block.git', tag = 'tag-tmp-rc' }
ton_block_json = { git = 'ssh://git@github.com/tonlabs/ever-block-json.git', tag = 'tag-tmp-rc' }
ton_node = { git = 'ssh://git@github.com/tonlabs/ever-node.git', tag = 'tag-tmp-rc' }
ton_types = { git = 'ssh://git@github.com/tonlabs/ever-types.git', tag = 'tag-tmp-rc' }

[features]
default = [ 'telemetry' ]
export_key = [ 'ton_types/export_key' ]
telemetry = [ 'adnl/telemetry', 'dht/telemetry', 'overlay/telemetry' ]

