[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton-node-tools'
version = '0.1.318'

[[bin]]
name = 'adnl_resolve'
path = 'bin/adnl_resolve.rs'


[[bin]]
name = 'adnl_ping'
path = 'bin/adnl_ping.rs'


[[bin]]
name = 'dhtscan'
path = 'bin/dhtscan.rs'


[[bin]]
name = 'gendht'
path = 'bin/gendht.rs'


[[bin]]
name = 'console'
path = 'bin/console.rs'


[[bin]]
name = 'keygen'
path = 'bin/keygen.rs'


[[bin]]
name = 'keyid'
path = 'bin/keyid.rs'


[[bin]]
name = 'print'
path = 'bin/print.rs'


[[bin]]
name = 'zerostate'
path = 'bin/zerostate.rs'

[dependencies]
adnl = { features = [ 'client' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = '0.9.22' }
base64 = '0.13'
clap = '2.33.3'
dht = { git = 'https://github.com/tonlabs/ever-dht.git', tag = '0.6.87' }
failure = '0.1.6'
hex = '0.4.2'
log = '0.4.11'
log4rs = '1.2'
overlay = { git = 'https://github.com/tonlabs/ever-overlay.git', tag = '0.7.19' }
serde = '1.0.105'
serde_json = '1.0.56'
shell-words = '1.0.0'
tokio = { features = [ 'rt-multi-thread' ], version = '1.5.0' }
tokio-util = '0.7'
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = '0.3.59' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.122' }
ton_block_json = { git = 'https://github.com/tonlabs/ever-block-json.git', tag = '0.7.211' }
ton_node = { git = 'https://github.com/tonlabs/ever-node.git', tag = 'pre_dynamic_timeout' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.32' }

[features]
default = [ 'telemetry' ]
export_key = [ 'ton_types/export_key' ]
telemetry = [ 'adnl/telemetry', 'dht/telemetry', 'overlay/telemetry' ]

